--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'io.happyharbor'
-version '0.2.0-SNAPSHOT'
+version '0.3.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -89,6 +89,7 @@ task newMasterVersion {
         }
         String s = buildFile.getText().replaceFirst("version '$version'", "version '" + newVersion + "'")
         buildFile.setText(s) //replace the build file's text
+        println(newVersion)
     }
 }
 
@@ -101,43 +102,15 @@ task newDevelopmentVersion {
         String minorStr = newVersion.substring(0, newVersion.lastIndexOf("."))
         int minor = minorStr.substring(minorStr.lastIndexOf('.') + 1).toInteger() + 1
         String majorStr = minorStr.substring(0, minorStr.lastIndexOf("."))
-        String s = buildFile.getText().replaceFirst("version '$version'", "version '" + majorStr +  "." + minor + "." + 0 + "-SNAPSHOT'")
+        String finalVersion = majorStr +  "." + minor + "." + 0 + "-SNAPSHOT"
+        String s = buildFile.getText().replaceFirst("version '$version'", "version '" + finalVersion + "'")
         buildFile.setText(s) //replace the build file's text
+        println(finalVersion)
     }
 }
 
-task incrementBuildVersion {
+task getVersion {
     doLast {
-        String newVersion = version
-        String suffix = ''
-        if (newVersion.endsWith('-SNAPSHOT')) {
-            newVersion = newVersion.substring(0, newVersion.length() - 9)
-            suffix = '-SNAPSHOT'
-        }
-        String buildStr = newVersion.substring(newVersion.lastIndexOf('.') + 1)
-        int build = buildStr.toInteger() + 1
-        String minorStr = newVersion.substring(0, newVersion.lastIndexOf("."))
-        int minor = minorStr.substring(minorStr.lastIndexOf('.') + 1).toInteger()
-        String majorStr = minorStr.substring(0, minorStr.lastIndexOf("."))
-        String s = buildFile.getText().replaceFirst("version '$version'", "version '" + majorStr +  "." + minor + "." + build + suffix + "'")
-        buildFile.setText(s) //replace the build file's text
-    }
-}
-
-task incrementMinorVersion {
-    doLast {
-        String newVersion = version
-        String suffix = ''
-        if (newVersion.endsWith('-SNAPSHOT')) {
-            newVersion = newVersion.substring(0, newVersion.length() - 9)
-            suffix = '-SNAPSHOT'
-        }
-        String buildStr = newVersion.substring(newVersion.lastIndexOf('.') + 1)
-        int build = buildStr.toInteger()
-        String minorStr = newVersion.substring(0, newVersion.lastIndexOf("."))
-        int minor = minorStr.substring(minorStr.lastIndexOf('.') + 1).toInteger() + 1
-        String majorStr = minorStr.substring(0, minorStr.lastIndexOf("."))
-        String s = buildFile.getText().replaceFirst("version '$version'", "version '" + majorStr +  "." + minor + "." + build + suffix + "'")
-        buildFile.setText(s) //replace the build file's text
+        println(version)
     }
 }
