--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,22 @@ plugins {
 }
 
 group 'io.happyharbor'
-version '0.3.0'
+version '0.4.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    platform('org.apache.logging.log4j:log4j-bom:2.14.0')
+
+    // logging
+    implementation 'org.slf4j:slf4j-api:2.0.0-alpha1'
+    runtimeOnly 'org.apache.logging.log4j:log4j-slf4j18-impl:2.14.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+    annotationProcessor 'org.projectlombok:lombok:1.18.16'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
