--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'java-library'
     id 'maven-publish'
     id 'signing'
+    id 'io.codearte.nexus-staging' version '0.22.0'
 }
 
 group 'io.happyharbor'
-version '0.4.0'
+version '0.5.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -27,6 +28,11 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+java {
+    withJavadocJar()
+    withSourcesJar()
 }
 
 publishing {
@@ -94,6 +100,11 @@ javadoc {
     if(JavaVersion.current().isJava9Compatible()) {
         options.addBooleanOption('html5', true)
     }
+}
+
+nexusStaging {
+    username = findProperty('sonatypeUsername')
+    password = findProperty('sonatypePassword')
 }
 
 task newMasterVersion {
