--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,12 +3,10 @@
 # Check https://circleci.com/docs/2.0/language-java/ for more details
 #
 version: 2.1
-orbs:
-  coveralls: coveralls/coveralls@1.0.6
 executors:
   java-executor:
     docker:
-      - image: cimg/openjdk:13.0-node
+      - image: cimg/openjdk:13.0
 jobs:
   build_test:
     executor:
@@ -26,7 +24,7 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
-      - run: gradle dependencies
+      - run: ./gradlew dependencies
 
       - save_cache:
           paths:
@@ -34,9 +32,9 @@ jobs:
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
       # run tests!
-      - run: gradle test
+      - run: ./gradlew test
 
-      - run: gradle coveralls
+      - run: ./gradlew jacocoTestReport coveralls
 
       - persist_to_workspace:
           root: .
@@ -58,7 +56,7 @@ jobs:
           command: |
             echo 'export ORG_GRADLE_PROJECT_signingKey=$(echo $ORG_GRADLE_PROJECT_signingKey_encoded | base64 -d)' >> $BASH_ENV
             source $BASH_ENV
-      - run: gradle publish
+      - run: ./gradlew publish
 
 
   publish_release:
@@ -76,8 +74,8 @@ jobs:
             echo 'export ORG_GRADLE_PROJECT_signingKey=$(echo $ORG_GRADLE_PROJECT_signingKey_encoded | base64 -d)' >> $BASH_ENV
             source $BASH_ENV
       - run: ./gradlew -q newMasterVersion
-      - run: gradle publish
-      - run: gradle closeAndReleaseRepository
+      - run: ./gradlew publish
+      - run: ./gradlew closeAndReleaseRepository
 
       - run: git config --global user.email "circlesci@happyharbor.io"
       - run: git config --global user.name "Circles CI"
