--- a/build.gradle
+++ b/build.gradle
@@ -5,10 +5,11 @@ plugins {
     id 'io.codearte.nexus-staging' version '0.22.0'
     id 'jacoco'
     id 'com.github.kt3k.coveralls' version '2.8.4'
+    id "org.sonarqube" version '3.1.1'
 }
 
 group 'io.happyharbor'
-version '0.5.1'
+version '0.5.2-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -118,6 +119,14 @@ jacocoTestReport {
 
 coveralls {
     jacocoReportPath 'build/reports/jacoco/test/jacocoTestReport.xml'
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "happyharbor_future-lib"
+        property "sonar.organization", "happyharbor"
+        property "sonar.host.url", "https://sonarcloud.io"
+    }
 }
 
 task newMasterVersion {
