--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,11 @@ plugins {
     id 'maven-publish'
     id 'signing'
     id 'io.codearte.nexus-staging' version '0.22.0'
-    id 'jacoco'
-    id 'com.github.kt3k.coveralls' version '2.8.4'
     id "org.sonarqube" version '3.1.1'
 }
 
 group 'io.happyharbor'
-version '0.5.2'
+version '0.5.3-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -108,17 +106,6 @@ javadoc {
 nexusStaging {
     username = findProperty('sonatypeUsername')
     password = findProperty('sonatypePassword')
-}
-
-jacocoTestReport {
-    reports {
-        xml.enabled = true // coveralls plugin depends on xml format report
-        html.enabled = true
-    }
-}
-
-coveralls {
-    jacocoReportPath 'build/reports/jacoco/test/jacocoTestReport.xml'
 }
 
 sonarqube {
