Try to break github check

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,9 +95,7 @@ jobs:
 workflows:
   test_and_publish:
     jobs:
-      - build_test:
-          context:
-            - SonarCloud
+      - build_test
       - publish_release:
           requires:
             - build_test
